W-10618818: Adding opens needed by Hazelcast's optimizations. (#13616)
(cherry picked from commit 7f2208cd5e581f728b244eac6ca1de072caaecd8)